@@ -21,6 +21,7 @@
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+#include "ace/Service_Object.h"
 #include "ace/Task.h"
 
 /**
@@ -60,8 +61,30 @@ private:
 
 };
 
+/**
+ * @class Refuses_Init
+ *
+ * @brief The Refuses_Init service simply tests for proper operation
+ *        when a service's init() hook returns -1.
+ */
+class Service_Config_DLL_Export Refuses_Init : public ACE_Service_Object
+{
+public:
+  // Constructor; required for factory function.
+  Refuses_Init () {}
+
+  /// Initializes object when dynamic linking occurs.
+  virtual int init (int argc, ACE_TCHAR *argv[]);
+
+  /// Terminates object when dynamic unlinking occurs.
+  virtual int fini (void);
+
+  /// Returns information on a service object.
+  virtual int info (ACE_TCHAR **info_string, size_t length = 0) const;
+};
 
 ACE_FACTORY_DECLARE (Service_Config_DLL, Service_Config_DLL)
+ACE_FACTORY_DECLARE (Service_Config_DLL, Refuses_Init)
 
 #include /**/ "ace/post.h"
 
